fix: horizontal scrollbar

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -23,7 +23,7 @@ body
   transition: color 1s linear
 
 #svg-container
-  width: 75vw
+  width: 98vw
   transition: color 1s linear
 
 .inner-container
